fixed overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -394,7 +394,7 @@ ul{
   padding-right: 0px !important;
 }
 .eventCard>.row>div>.row>.title , .eventCard>.row>div>.row>.caption{
-  margin-bottom: 6px;
+  margin-bottom: 9px;
   padding-left: 9px;
   padding-right: 9px;
 }
